# VRC-BundleExtractor

./: CMakeLists.txt  README.md  binaryreader.cpp  binaryreader.h  blocksinfo.cpp  blocksinfo.h  bundlefileblockreader.cpp  bundlefileblockreader.h  bundlefilescheme.cpp  bundlefilescheme.h  bundlefilestreamheader.cpp  bundlefilestreamheader.h  bundleflags.h  bundleheader.cpp  bundleheader.h  bundlemetadata.cpp  bundlemetadata.h  bundlerawwebheader.cpp  bundlerawwebheader.h  bundlereader.cpp  bundlereader.h  bundlescene.cpp  bundlescene.h  bundletype.h  bundleversion.h  compressiontype.h  directoryinfo.cpp  directoryinfo.h  endianreader.cpp  endianreader.h  endianswap.h  endiantype.h  fileentrytype.h  fileidentifier.cpp  fileidentifier.h  filenameutils.cpp  filenameutils.h  filereadsource.cpp  filereadsource.h  filescheme.cpp  (+28 more)
